tests/lean/typeOf.lean.expected.out
typeOf.lean:11:21: error: application type mismatch
  Add.add x
argument
  x
has type
  Nat
but is expected to have type
  Bool
typeOf.lean:12:0: error: application type mismatch
  Add.add r
argument
  r
has type
  Bool
but is expected to have type
  Nat
typeOf.lean:20:54: error: invalid reassignment, term has type
  Bool
but is expected to have type
  Nat
typeOf.lean:29:53: error: natural number expected, value has type
  Bool
but is expected to have type
  Nat
